--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 reqwest = { version = "0.10", features = ["blocking"] }
 anyhow = "1.0"
+select = "0.5"
+url = "2.2"
