--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 [dependencies]
 reqwest = { version = "0.10", features = ["blocking"] }
 anyhow = "1.0"
+thiserror = "1.0"
 select = "0.5"
 url = "2.2"
 clap = "2.33"
+log = "0.4"
+env_logger = "0.8"
